--- a/ChirpBanner/ChirpBanner.csproj
+++ b/ChirpBanner/ChirpBanner.csproj
@@ -77,7 +77,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChirpyBannerMod.cs" />
+    <Compile Include="BannerConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UICheckSubPanel.cs" />
+    <Compile Include="UIColorSubPanel.cs" />
+    <Compile Include="UISliderSubPanel.cs" />
+    <Compile Include="UITitleSubPanel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
